@@ -1,53 +1,51 @@
 package slt.database;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.stereotype.Repository;
 import slt.database.entities.Portion;
 
 import jakarta.transaction.Transactional;
-import java.util.List;
 
+import java.util.List;
 
 interface PortionCrudRepository extends CrudRepository<Portion, Long> {
 
-    List<Portion> findByFoodIdAndId(Integer foodId, Long portionId);
+    List<Portion> findByFoodIdAndId(final Long foodId, final Long portionId);
 
-    List<Portion> findByFoodIdAndDescription(Integer foodId, String description);
+    List<Portion> findByFoodIdAndDescription(final Long foodId, final String description);
 
-    List<Portion> findByFoodId(Integer foodId);
+    List<Portion> findByFoodId(final Long foodId);
 
-    void deleteByFoodIdIn(List<Integer> foodId);
+    void deleteByFoodIdIn(final List<Long> foodId);
 }
 
 @Repository
+@AllArgsConstructor
 public class PortionRepository {
 
-    @Autowired
     private PortionCrudRepository portionCrudRepository;
 
-
-    public Portion savePortion(Long foodId, Portion portion) {
-        portion.setFoodId(foodId.intValue());
-        return portionCrudRepository.save(portion);
+    public Portion getPortion(final Long foodId, final Long portionId) {
+        List<Portion> queryResults = portionCrudRepository.findByFoodIdAndId(foodId, portionId);
+        return queryResults.isEmpty() ? null : queryResults.getFirst();
     }
 
-    public Portion getPortion(Long foodId, Long portionId) {
-        List<Portion> queryResults = portionCrudRepository.findByFoodIdAndId(foodId.intValue(), portionId);
-        return queryResults.isEmpty() ? null : queryResults.get(0);
+    public Portion getPortion(final Long foodId, final String description) {
+        List<Portion> queryResults = portionCrudRepository.findByFoodIdAndDescription(foodId, description);
+        return queryResults.isEmpty() ? null : queryResults.getFirst();
     }
 
-    public Portion getPortion(Long foodId, String description) {
-        List<Portion> queryResults = portionCrudRepository.findByFoodIdAndDescription(foodId.intValue(), description);
-        return queryResults.isEmpty() ? null : queryResults.get(0);
+    public List<Portion> getPortions(final Long foodId) {
+        return portionCrudRepository.findByFoodId(foodId);
     }
 
-    public List<Portion> getPortions(Long foodId) {
-        return portionCrudRepository.findByFoodId(foodId.intValue());
+    public List<Portion> getAllPortions() {
+        return (List<Portion>) portionCrudRepository.findAll();
     }
 
     @Transactional
-    public void deleteAllForUser(List<Integer> foodIds) {
+    public void deleteAllForUser(final List<Long> foodIds) {
         if (foodIds.isEmpty()) {
             return;
         }
